- Fixed: error on placing furnace with CP if furnaces are not in protectables.yml