@@ -25,6 +25,32 @@ general:
     # 1000 = 1k
     short-unit: '${value}{unit}'
 
+  # Date format
+  # MM: Month
+  # dd: Day of month
+  # yyyy: Year
+  # hh: hours
+  # mm: minutes
+  # ss: seconds
+  # NOTE: These settings require server reload / restart.
+  date-format:
+    # Set the time zone for date text outputs.
+    # Example: America/Los_Angeles or GMT-8:00
+    # List of time zones: https://timezonedb.com/time-zones
+    # If empty, it uses the time zone of the machine your server is running on.
+    time-zone: ''
+    # General format for invites etc.
+    # Examples:
+    #   American 12-hour format (a = 12 hour format): MM/dd/yyyy hh:mm a
+    #   German 24-hour format: dd.MM.yyyy hh:mm
+    general: 'MM/dd/yyyy hh:mm a'
+    # Format used when only a time displayed.
+    # Examples:
+    #   American 12-hour format (a = 12 hour format): hh:mm a
+    #   German 24-hour format: hh:mm
+    time_2: 'hh:mm a'
+
+
 # Database options
 database:
   # MySQL database
@@ -41,6 +67,14 @@ database:
 
     # It's highly recommended to set a unique table prefix if the plugin shares a database with other plugins or FasterFurnaces instances.
     table-prefix: 'furnaces_'
+
+
+vanilla:
+  # Convert normal furnaces to upgradeable furnaces upon placement?
+  # Please keep in mind that this won't work, if players already reached their max amount of upgradeable furnaces.
+  convert: false
+  # Allow the placement of vanilla hoppers?
+  place: true
 
 
 integration:
